<resources>
    <!-- Other string resources-->
    <string name="app_name">GitHub UserApp</string>
    <string name="tv_users_type">type</string>
    <string name="tv_users_username">username</string>
    <string name="github_user">Github User</string>
    <string name="avatar">avatar</string>
    <string name="tv_name_received">name received</string>
    <string name="tv_follower_received">follower received</string>
    <string name="tv_following_received">following received</string>
    <string name="tv_company_received">company received</string>
    <string name="tv_location_received">location received</string>
    <string name="tv_repository_received">repository received</string>
    <string name="detailTitle">Detail username received</string>
    <string name="splash_screen_text">Github User</string>
    <string name="tv_main">Find All Github User and Details Here</string>
    <string name="logoapp">Logo</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="followers_label">Followers</string>
    <string name="following_label">Following</string>
    <string name="search_user">Search User</string>
    <string name="text_not_found1">User not found</string>
    <string name="text_not_found2">Try to Search Some User</string>
    <string name="user_not_found">User not found</string>
    <string name="no_followers">No Followers</string>
    <string name="no_following">No Following</string>
    <string name="img_user_not_found">User not found</string>
    <string name="fb_favorite">Favorite</string>
    <string name="pref_language">Select Language</string>
    <string name="pref_notification">Reminder at 9.00 AM</string>
    <string name="selected_language">English</string>
    <string name="reminder_off">Notification Off</string>
    <string name="reminder_on">Notification On</string>
    <string name="notification">Lets find user in Github UserApp!</string>
    <string name="settings">Settings</string>
    <string name="add_favorite">Add user to favorite</string>
    <string name="list_favorite_user">List Favorite User</string>
    <string name="username_widget_text">username widget text</string>
    <string name="type_widget_text">type widget text</string>
    <string name="favorite_users">Github Favorite Users</string>
    <string name="no_image">No Image</string>
    <string name="cd_image">Image user</string>
    <string name="remove_favorite">Remove user from favorite</string>
    <string name="tv_userwidget_title1">Unfortunately..</string>
    <string name="tv_userwidget_title2">No Favorites User Here</string>

</resources>