<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background= "@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView_widget"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/cd_image"
        tools:srcCompat="@drawable/user_not_found" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/username_widget_text"
            android:textColor="@color/AppBackgroundColor"
            android:fontFamily="@font/poppins_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/type_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/type_widget_text"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/AppBackgroundColor"
            android:textSize="14sp" />
    </LinearLayout>

</FrameLayout>