<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/banner_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_widget"
        android:padding="8dp"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white" />

    <StackView
        android:id="@+id/stack_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/banner_text"
        android:loopViews="true"
        tools:listitem="@layout/widget_item" />

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/banner_text"
        android:background="@drawable/background_widget_body"
        android:padding="20dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:contentDescription="@string/no_image"
            android:scaleType="fitXY"
            android:src="@drawable/user_not_found"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_userWidget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_black"
            tools:text="@string/tv_userwidget_title1" />

        <TextView
            android:id="@+id/tv_userWidget_message"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_bold"
            tools:text="@string/tv_userwidget_title2" />
    </LinearLayout>
</RelativeLayout>
