<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/cardBackground"
        android:padding="12dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_avatar"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:contentDescription="@string/avatar"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/tv_item_username"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@color/imgBackground" />

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_avatar"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_avatar"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tv_users_username" />

        <TextView
            android:id="@+id/tv_item_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_username"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_avatar"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_avatar"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_username"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/tv_users_type" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>